# led-timing-board

./: .coveragerc  .editorconfig  .envrc  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  6x8_custom.bdf  CPPLINT.cfg  LICENSE  Makefile  README.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini  stdin-text-driver.cc  ter-u32b.bdf  timing_board.py
.devcontainer/: devcontainer.json
src/: stdin-text-driver.cc  timing_board.py
src/led_timing_board/: display_strategies.py  main.py
tests/: test_timing_board.py
