[tool.poetry]
name = "racing-timing-board"
version = "0.1.0"
description = "Timing board for racing"
authors = ["Arnaud Rocher <arnaud.roche3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
cpplint = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
