[tool.poetry]
name = "racing-timing-board"
version = "0.1.0"
description = "Timing board for racing"
authors = ["Arnaud Rocher <arnaud.roche3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
cpplint = "^1.4"
pylint = "^2.3"
ipython = "^7.5"
flake8-comprehensions = "^2.1"
pytest = "^4.4"
pep8-naming = "^0.8.2"
flake8-bugbear = "^19.3"
pytest-cov = "^2.7"
mypy = "^0.701.0"
flake8 = "^3.7"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
