[tool.poetry]
name = "led-timing-board"
version = "0.1.0"
description = "RGB led matrix timing board"
authors = [ "Arnaud Rocher <arnaud.roche3@gmail.com>" ]
license = "MIT"

[tool.poetry.scripts]
timing-board = "led_timing_board.main:run"

[tool.poetry.dependencies]
python = "^3.9"
evdev = "1.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
flake8-comprehensions = "^3.10.0"
pep8-naming = "^0.13.0"
flake8-bugbear = "^22.6.22"
flake8-unused-arguments = "^0.0.10"
mypy = "^0.961"
flake8-bandit = "^3.0.0"

[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
